# o2view

./: README.md  o2view.code-workspace  pyproject.toml
src/o2view/: __init__.py  datamodel.py  domino.py  main.py  server.py  visualization.py
src/o2view/assets/: clientside.js  custom.css  style.css
src/o2view/data/: bacteria_metadata_with_fits.arrow  eggs_metadata_with_fits.arrow  fit_markers.arrow
