[project]
name = "o2view"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frederik Krämer", email = "frdrkkraemer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.0rc4",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=1.0.0",
    "numpy>=2.2.4",
    "plotly>=6.0.0",
    "polars[excel]>=1.25.2",
    "pyjanitor>=0.31.0",
    "pywebview>=5.4",
    "scipy>=1.15.2",
    "setproctitle>=1.3.5",
]

[project.scripts]
o2view = "o2view.main:start"

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
